Ingressweb/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ac5d76f0ee54f467bbde9859a3e836de-721898587.ap-southeast-2.elb.amazonaws.com
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: frontendsrv
                port:
                  number: 80
         -  path: /student
            pathType: Prefix
            backend:
              service: 
                name: backendsrv
                port:
                  number: 8080
